--- a/src/background.tex
+++ b/src/background.tex
@@ -1,6 +1,6 @@
 \label{sec:background}
 \subsection{CNN based methods in DSLAM}
-As described before, there are two essential components on each agent: 1) Visual Odometry (VO) and 2) Place Recognition.
+As described before, there are two essential components on each agent: $1)$ Visual Odometry (VO) and $2)$ Place Recognition.
 
 \subsubsection{Visual Odometry (VO)}
 
