--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -7,7 +7,7 @@ However, in many scenarios, communication is limited, so that there is no server
 
 Therefore, to reduce communication requirements, the previous work \cite{Cieslewski:20187ee} proposes a data-efficient decentralized SLAM(DSLAM) system. 
 The DSLAM frame in \cite{Cieslewski:20187ee} is illustrated in \cref{fig:all_pre}.
-It makes improvements in three typical components in the DSLAM system: 1) Using ORB-SLAM \cite{Mur-Artal:2017281} in stereo configuration as the visual odometry (VO) algorithm which provides basic intra-robot pose estimation. 2) Using NetVLAD \cite{Arandjelovic:2017997} algorithm to do place recognition which relates the current observation to previous scenes and other robots. 3) Using distributed Gauss-Seidel algorithm \cite{bertsekas1989} as the optimization back-end which optimizes the intra-robot position and fuses the inter-robot locations and maps. Each agent executes the ORB-SLAM which contains three steps for each input frame: feature extraction, feature matching and RANSAC. The NetVLAD method can encode the camera frame to a short vector which can be transformed to the server or a central agent with low communication cost.
+It makes improvements in three typical components in the DSLAM system: $1)$ Using ORB-SLAM \cite{Mur-Artal:2017281} in stereo configuration as the visual odometry (VO) algorithm which provides basic intra-robot pose estimation. $2)$ Using NetVLAD \cite{Arandjelovic:2017997} algorithm to do place recognition which relates the current observation to previous scenes and other robots. $3)$ Using distributed Gauss-Seidel algorithm \cite{bertsekas1989} as the optimization back-end which optimizes the intra-robot position and fuses the inter-robot locations and maps. Each agent executes the ORB-SLAM which contains three steps for each input frame: feature extraction, feature matching and RANSAC. The NetVLAD method can encode the camera frame to a short vector which can be transformed to the server or a central agent with low communication cost.
 
 However, both ORB-SLAM and NetVLAD require tremendous computation and storage resources, and thus, the deployment of DSLAM on embedded system is challenged by the limited resources and power supply.
 
