--- a/src/experiment.tex
+++ b/src/experiment.tex
@@ -53,7 +53,7 @@ At the fixed-finetune procedure, we use the stereo pairs in sequences 01 to 10 a
 
 \begin{table}[ht]
     \centering
-    \caption{Visual odometry (VO) result}
+    \caption{???Visual odometry (VO) result}
     \footnotesize
     \begin{threeparttable}
 \begin{tabular}{|c|c|c|c|}
@@ -82,7 +82,7 @@ At the fixed-finetune procedure, we use the stereo pairs in sequences 01 to 10 a
 \begin{figure}[t]
     \centering  
     \includegraphics[width=0.75\linewidth]{fig/VO.eps}
-    \caption{Trajectory of different VO methods on sequence 00.}
+    \caption{???Trajectory of different VO methods on sequence 00.}
     \label{fig:VO}
 \end{figure}
 
@@ -118,14 +118,14 @@ A possible way to solve the inter-robot pose estimation is to calculate the feat
 \begin{figure}[ht]
   \centering  
   \includegraphics[width=0.85\linewidth]{fig/dslam.eps}
-  \caption{The sub-trajectory of each agent and the merged trajectory.}
+  \caption{??? The sub-trajectory of each agent and the merged trajectory.}
   \label{fig:dslam}
 \end{figure}
 
 \begin{figure}[thb]
   \centering  
   \includegraphics[width=0.85\linewidth]{fig/data.eps}
-  \caption{The total communication traffic of the propsoed DSLAM}
+  \caption{??? The total communication traffic of the propsoed DSLAM}
   \label{fig:data}
 \end{figure}
 
