--- a/root.tex
+++ b/root.tex
@@ -71,7 +71,8 @@ Data-Efficient and Hardware-Efficient Decentralized Monocular Visual {SLAM}
 \section{Introduction}
 \input{src/introduction.tex}
 
-\section{Background and Motivation}
+\section{Background}
+% \section{Background and Motivation}
 \input{src/background.tex}
 
 
