--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,7 +1,7 @@
-Decentralized simultaneous localization and mapping (DSLAM) is essential to a multi-robot system, especially in environments lacking absolute positioning equipment like GPS.
-Monocular visual-based SLAM is a widely adopted solution in the industry for its low cost and high flexibility.
-Two essential components need to be efficiently deployed on each agent: $1)$ Visual Odometry(VO) and $2)$ Place Recognition. However, both of these components require intensive computation and storage on the embedded system.
-The place recognition task is usually done with CNN based methods. We adopt CNN as the VO to provide 6-D pose between different frames, for both intra-robot or inter-robot. Thus we can use the CNN accelerator based on FPGA to execute these two components.
-In this work, we propose a hardware-software co-design DSLAM framework and use embedded FPGA to accelerator these two components.
+With the gradual improvement of the single-agent capabilities, it is possible to build up the multi-agent collaborative intelligence system.
+Distributed simultaneous localization and mapping (DSLAM) can share location and environmental information between robots and is the basis for many multi-agent applications.
+With the development of algorithms and computing platforms in recent years, convolutional neural network (CNN) has been widely used in SLAM systems, especially in visual-based SLAM systems.
+CNN can directly predict the pose with the absolute scale from two successive monocular frames, which can be easy to deploy on real robots and can make SLAM more robust in scenarios with pure rotations. Further, with CNN's versatility, it is easy to use the same network structure for many other tasks rather than depth or pose estimation, such as object detection and semantic segmentation.
+Finally, CNN's computational structure is uniform and can be individually optimized when resources are limited on embedded systems.
 
-We evaluate our framework on the hardware platform Xilinx ZU9 SoC, and we can perform DSLAM in real time on each agent. We also evaluate our system on the publicly available dataset.
+In this work, we aim to build a fully CNN-based hardware-software co-design monocular DSLAM system. There are two keys components in DSLAM system: 1) Visual Odometry (VO) and 2) Place Recognition. We use fixed-point fine tune method to enhance the accuracy of CNN-based monocular VO and make it possible for acceleration on the Xilinx DPU accelerator. The same DPU also supports the place recognition component. We also propose a pipeline scheduling method to make full use of the DPU. To the best of our knowledge, this work is the first to implement all components of monocular DSLAM with CNN. We use the Xilinx ZU9 embedded MPSoC and the DPU IP core to validate the proposed DSLAM framework on the public dataset.
