--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -273,3 +273,10 @@
   year={2013},
   publisher={Sage Publications Sage UK: London, England}
 }
+
+@article{Tateno:2017776, 
+  title = {{Cnn-slam: Real-time dense monocular slam with learned depth prediction}}, 
+  author = {Tateno, Keisuke and Tombari, Federico and Laina, Iro and Navab, Nassir}, 
+  journal = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition}, 
+  year = {2017}
+}
