add figure and table results for vo in experiments and fix 2 syntax errors

--- a/src/hardsoft.tex
+++ b/src/hardsoft.tex
@@ -4,7 +4,7 @@ Our hardware-software co-design DSLAM system contains two essential improvements
 \begin{figure}[t]  
     \centering  
     {\includegraphics[width=0.85\linewidth]{fig/depth_vo_feat.eps}\label{fig:dvo}}
-    \caption{Illustration of Depth-VO-Feat framework in the training phase, where $T_LtoR$ is the relative camera pose transformations between right and left views, and $K$ denotes the known camera intrinsic matrix. $CNN_{VO}$ and $CNN_D$ are convolutional nets for visual odometry and depth estimation respectively, which can be used independently in the testing phase. }
+    \caption{Illustration of Depth-VO-Feat framework in the training phase, where $T_{LtoR}$ is the relative camera pose transformations between right and left views, and $K$ denotes the known camera intrinsic matrix. $CNN_{VO}$ and $CNN_D$ are convolutional nets for visual odometry and depth estimation respectively, which can be used independently in the testing phase. }
 \end{figure}
 
 \subsection{Pose Estimation}
