--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -280,3 +280,31 @@
   journal = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition}, 
   year = {2017}
 }
+
+@inproceedings{liu2016ssd,
+  title={Ssd: Single shot multibox detector},
+  author={Liu, Wei and Anguelov, Dragomir and Erhan, Dumitru and Szegedy, Christian and Reed, Scott and Fu, Cheng-Yang and Berg, Alexander C},
+  booktitle={European conference on computer vision},
+  pages={21--37},
+  year={2016},
+  organization={Springer}
+}
+
+@inproceedings{long2015fully,
+  title={Fully convolutional networks for semantic segmentation},
+  author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={3431--3440},
+  year={2015}
+}
+
+@article{mao2018towards,
+  title={Towards real-time object detection on embedded systems},
+  author={Mao, Huizi and Yao, Song and Tang, Tianqi and Li, Boxun and Yao, Jun and Wang, Yu},
+  journal={IEEE Transactions on Emerging Topics in Computing},
+  volume={6},
+  number={3},
+  pages={417--431},
+  year={2018},
+  publisher={IEEE}
+}
