update vo net image and change related description

--- a/src/experiment.tex
+++ b/src/experiment.tex
@@ -58,12 +58,12 @@ At the fixed-finetune procedure, we use the stereo pairs in sequences 01 to 10 a
     \begin{threeparttable}
 \begin{tabular}{|c||cc|cc|c|}
   \hline
-  \multirow{2}[2]{*}{method} & \multicolumn{2}{c|}{Seq. 09} & \multicolumn{2}{c|}{Seq. 10} & run time  \bigstrut[t]\\
+  \multirow{2}[2]{*}{Method} & \multicolumn{2}{c|}{Seq. 09} & \multicolumn{2}{c|}{Seq. 10} & run time  \bigstrut[t]\\
                              & $t_{err}$        & $r_{err}$ & $t_{err}$        & $r_{err}$ & $(ms/frame)$ \bigstrut[b]\\
   \hline
   ORB-SLAM  &15.30 &0.26 &3.68 &0.48 &  \bigstrut\\
   \hline
-  Ours(float)  &10.49 &3.34 &11.64 &3.14 &  \bigstrut\\
+  Zhan et al.(float)  &10.49 &3.34 &11.64 &3.14 &  \bigstrut\\
   \hline
   Ours(fixed)  &10.27 &4.08 &8.84 &4.01 & 12 \bigstrut\\
   \hline
